--- a/styles.css
+++ b/styles.css
@@ -51,4 +51,5 @@ button{
   border: 0px;
   color: #4ECCA3;
   background-color: rgb(253, 250, 250);
+  box-shadow: 5px 5px 10px #4ecca2aa,-5px -5px 10px #4ecca29d;
 }
